--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="result-box">
-          <span id="result"></span>
+          <span id="resultLocation"></span>
         </div>
         
         <div class="password-length">
@@ -53,7 +53,7 @@
 
 
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button id="generate-btn" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
